[gd_scene load_steps=3 format=3 uid="uid://c0f2yxh7lgyyx"]

[ext_resource type="Script" path="res://settings.gd" id="1_7wd6b"]
[ext_resource type="Theme" uid="uid://3oypcg7vnled" path="res://default.tres" id="1_olkq5"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7wd6b")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="leftPlayer" type="Control" parent="."]
anchors_preset = 0
offset_left = 270.0
offset_top = 80.0
offset_right = 310.0
offset_bottom = 120.0

[node name="Label" type="Label" parent="leftPlayer"]
layout_mode = 2
offset_left = -170.0
offset_right = 171.0
offset_bottom = 65.0
theme = ExtResource("1_olkq5")
text = "Player 1"

[node name="enableAI" type="Button" parent="leftPlayer"]
layout_mode = 2
offset_left = -196.0
offset_top = 100.0
offset_right = 196.0
offset_bottom = 173.0
theme = ExtResource("1_olkq5")
text = "Enable AI"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 451.0
offset_top = 547.0
offset_right = 630.0
offset_bottom = 620.0
theme = ExtResource("1_olkq5")
text = "Back"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
